--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
         	<artifactId>commons-fileupload</artifactId>
         	<version>1.3.3</version>
         </dependency>
+        
+        <!-- 解析json用的 -->
+        <dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
